--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,5 +1,5 @@
 <div class="profile-summary profile profile--{{ member.fullname | downcase | replace: ' ', '-' }}">
-    <a href="/profiles/{{ member.fullname | downcase | replace: ' ', '-' }}/">
+    <a href="{{ site.baseurl }}/profiles/{{ member.fullname | downcase | replace: ' ', '-' }}/">
         <span class="profile-summary__icon">
             {{ member.initials }}
         </span>
