--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
 
-    <title>Working at DealerDirect -- Achievements</title>
-
+    <title>Achievements -- Working at DealerDirect</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400,700" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" />
-    <link rel="stylesheet" href="/css/layout.css" />
-    <link rel="stylesheet" href="/css/base-theme.css" />
-    <link rel="stylesheet" href="/css/modules/profile-summary.css" />
-    <link rel="stylesheet" href="/css/modules/achievements.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/layout.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/base-theme.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/modules/profile-summary.css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/modules/achievements.css" />
 </head>
 <body>
     {% include menu.html %}
@@ -22,8 +21,9 @@
         <header>
             <h1>Achievements</h1>
         </header>
-        
+
         {{ content }}
+
     </main>
 </body>
 </html>
