--- a/css/modules/achievements.css
+++ b/css/modules/achievements.css
@@ -27,7 +27,7 @@
 }
 
 .achievements .score {
-    font-size: 8em;
+    font-size: 5em;
     font-weight: bold;
     color: black;
     text-shadow:
@@ -37,7 +37,8 @@
         white 0 0 1em
     ;
     position: absolute;
-    top: 0;
+    top: 20%;
+    left: 0;
     width: 100%;
     height: 100%;
     text-align: center;
