bugfix to only show svg badges on profile
now shows png's too

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -17,7 +17,7 @@ layout: profile-list
         <ul>
         {% for static_file in site.static_files %}
             {% assign path = static_file.path | split: "/" %}
-            {% if path[2] == "badges" %}
+            {% if path[2] == "badges" && path[3] == "svg" %}
                 {% assign filename = path[4] | replace: '.svg', ''  %}
                 {% assign badge = filename | split: '_' %}
                 {% assign badgeName = badge[1] %}
