--- a/_includes/menu-profile.html
+++ b/_includes/menu-profile.html
@@ -1,5 +1,6 @@
     <ul role="navigation">
-        {% for department in site.data.members.departments %}
+        {% assign departments = site.data.members.departments | sort: 'name' %}
+        {% for department in departments %}
         <li>
             <h2>{{ department.name }}</h2>
             <ul>
