Changes profile.html to use slug.

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,4 +1,3 @@
-{% capture slug %}{% include slug-from-member.lqd %}{% endcapture %}
 <div class="profile profile-summary profile--{{ slug }}{% if highscorers contains slug %} winner{% endif %}">
     <a href="{{ site.baseurl }}/profiles/{{ slug }}/">
         <span class="profile-summary__icon">
@@ -7,7 +6,8 @@
 
         <span class="profile-summary__score">
             <span class="score">
-            {% include calculate-score-for-member.lqd %}
+            {% capture slug %}{% include slug-from-member.lqd %}{% endcapture %}
+            {% include calculate-score-for-member.lqd slug=slug %}
             {{ score }}
             </span>
         </span>
