Adds toggle score functionality to profile-list template.

--- a/_layouts/profile-list.html
+++ b/_layouts/profile-list.html
@@ -8,11 +8,12 @@ layout: default
     {% include menu-profile.html %}
 </menu>
 
-<main>
+<main class="profile-list">
     <header>
         <h1>Achievements</h1>
     </header>
 
     {{ content }}
-
 </main>
+
+<script src="{{ site.baseurl }}/js/toggle-all-scores.js"></script>
